# neuroplan

./: .env.example  AUDITORIA_FINAL_PRE_LANCAMENTO.md  AUDITORIA_NEUROPLAN.md  AUDITORIA_REARME_RELATORIO.md  AUDITORIA_TECNICA_NEUROEXECUCAO.md  BARKLEY_PLANNER_DOCS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY_HOSTINGER_VPS.md  DEPLOY_LOG.txt  ESTRUTURA_PASTAS_LOCAL.md  GUIA_COMPLETO_NEUROEXECUCAO.md  GUIA_IMPLANTACAO_PERMANENTE.md  IMPLEMENTACAO_FASE_32_33.md  MANUAL_INDICE.md  MANUAL_PARTE_1_PRODUTO.md  MANUAL_PARTE_2_INFRAESTRUTURA.md  MANUAL_PARTE_3_AUDITORIA.md  NOTEBOOKLM_LANDING_DESIGN.md  NOTEBOOKLM_LAYOUT_ANALYSIS.md  PROJETO_FINAL_NEUROEXECUCAO_MECE.md  PROMPT.md  README.md  REDESIGN_CHECKLIST.md  RELATORIO_IMPLEMENTACAO_ISSUES_1_5.md  ROADMAP_IMPLEMENTACAO.md  SETUP_DEPLOY_AUTOMATICO.md  design-notes.md  design-patterns-analysis.md  design-patterns-v2.md  package-lock.json  package.json  pnpm-lock.yaml  todo.md
.claude/: settings.json
backend/: .env.example  README.md  config.py  main.py  pyproject.toml
backend/api/: __init__.py  chat.py  personas.py  prompts.py  tdah.py  validation.py
backend/models/: __init__.py  chat.py  persona.py  prompt.py  tdah.py  validation.py
client/: index.html  sw.js
docs/: CHECKLIST_DEPLOY_PRODUCAO.md  GUIA_AMBIENTE_DESENVOLVIMENTO.md  GUIA_DEPLOY_STAGING.md  GUIA_VALIDACAO_USUARIOS.md  PLANO_TESTES_E2E.md  PLANO_TESTES_MANUAIS_BLOQUEADORES.md  TEMPLATE_REGISTRO_BUGS.md
drizzle/: 0001_jazzy_doctor_doom.sql  0002_skinny_black_bird.sql  0003_worried_mysterio.sql  0004_lethal_omega_red.sql  0005_sour_nehzno.sql  schema.ts  (+2 more)
(+182 files in other folders)
